log/build_2024-07-20_23-07-33/initialGoalpub_py/stdout_stderr.log
running egg_info
writing ../../build/initialGoalpub_py/initialGoalpub_py.egg-info/PKG-INFO
writing dependency_links to ../../build/initialGoalpub_py/initialGoalpub_py.egg-info/dependency_links.txt
writing entry points to ../../build/initialGoalpub_py/initialGoalpub_py.egg-info/entry_points.txt
writing requirements to ../../build/initialGoalpub_py/initialGoalpub_py.egg-info/requires.txt
writing top-level names to ../../build/initialGoalpub_py/initialGoalpub_py.egg-info/top_level.txt
reading manifest file '../../build/initialGoalpub_py/initialGoalpub_py.egg-info/SOURCES.txt'
writing manifest file '../../build/initialGoalpub_py/initialGoalpub_py.egg-info/SOURCES.txt'
running build
running build_py
copying initialGoalpub_py/initialGoalpub.py -> /media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/build/initialGoalpub_py/build/lib/initialGoalpub_py
running install
running install_lib
copying /media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/build/initialGoalpub_py/build/lib/initialGoalpub_py/initialGoalpub.py -> /media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/install/initialGoalpub_py/lib/python3.8/site-packages/initialGoalpub_py
byte-compiling /media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/install/initialGoalpub_py/lib/python3.8/site-packages/initialGoalpub_py/initialGoalpub.py to initialGoalpub.cpython-38.pyc
  File "/media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/install/initialGoalpub_py/lib/python3.8/site-packages/initialGoalpub_py/initialGoalpub.py", line 107
    else
       ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/install/initialGoalpub_py/lib/python3.8/site-packages/initialGoalpub_py-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/initialGoalpub_py/initialGoalpub_py.egg-info to /media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/install/initialGoalpub_py/lib/python3.8/site-packages/initialGoalpub_py-0.0.0-py3.8.egg-info
running install_scripts
Installing initialGoalpub script to /media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/install/initialGoalpub_py/lib/initialGoalpub_py
writing list of installed files to '/media/muayman17/New/Muhammad/BrightSkies Test/BlocksRearrengmentsROS2/build/initialGoalpub_py/install.log'
